--- a/Statinf/tests-dhypothèses-sur-deux-échantillons.html
+++ b/Statinf/tests-dhypothèses-sur-deux-échantillons.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2021-01-27" />
+<meta name="date" content="2021-02-02" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -660,7 +660,7 @@ loi de Bernoulli et on comparera leurs paramètres. <span class="math inline">\(
 <div class="rmdcaution">
 <p>Comme pour les tests sur une propotion vus dans le chapitre précédent, ce test est valable lorsque <span class="math inline">\(n_1\)</span> et <span class="math inline">\(n_2\)</span> sont suffisamment grands.</p>
 </div>
-<p>Supposons que l’approximation normale de la loi binomiale s’applique à chaque population, de sorte que les estimations des proportions <span class="math inline">\(\hat{p}_1=\sum_{i=1}^{n_1}X_{1i}/ {n_1}\)</span> et <span class="math inline">\(\hat{p}_2=\sum_{i=1}^{n_2}X_{2i}/ {n_2}\)</span> suivent approximativement les lois normales:</p>
+<p>Supposons que l’approximation normale de la loi binomiale s’applique à chaque population, de sorte que les estimations des proportions <span class="math inline">\(\hat{p}_1=\sum_{i=1}^{n_1}X_{1i}/ {n_1}\)</span> et <span class="math inline">\(\hat{p}_2=\sum_{j=1}^{n_2}X_{2j}/ {n_2}\)</span> suivent approximativement les lois normales:</p>
 <p><span class="math display">\[
 \hat{p}_1 \thicksim \mathcal{N}\big(p_1, \frac{p_1(1-p_1)}{n_1}\big) \quad \text{ et } \quad \hat{p}_2 \thicksim \mathcal{N}\big(p_2, \frac{p_2(1-p_2)}{n_2}\big)
 \]</span></p>
@@ -668,9 +668,9 @@ loi de Bernoulli et on comparera leurs paramètres. <span class="math inline">\(
 <p><span class="math display">\[
 \hat{p}_1-\hat{p}_2 \thicksim \mathcal{N}\big(0, p(1-p) \big[ \frac{1}{n_1} + \frac{1}{n_2} \big] \big)
 \]</span></p>
-<p>Un estimateur du paramètre commun <span class="math inline">\(p\)</span> (qu’on pourrait appeler la “proportion du succès global”) est:</p>
+<p>Un estimateur du paramètre commun<a href="#fn17" class="footnote-ref" id="fnref17"><sup>17</sup></a> <span class="math inline">\(p\)</span> (qu’on pourrait appeler la “proportion du succès global”) est:</p>
 <p><span class="math display">\[
-\hat{p} = \frac{X_1 + X_2}{n_1+n_2}
+\hat{p} = \frac{\sum_{i=1}^{n_1} X_{1i} + \sum_{j=1}^{n_2} X_{2j}}{n_1+n_2}
 \]</span></p>
 <p>La statistique du test pour <span class="math inline">\(H_0: p_1=p_2\)</span>, qui suit une loi <span class="math inline">\(\mathcal{N}(0,1)\)</span> lorsque <span class="math inline">\(H_0\)</span> est vraie, est alors</p>
 <p><span class="math display">\[
@@ -692,6 +692,7 @@ Z_0 = \frac{\hat{p}_1-\hat{p}_2}{\sqrt{ \hat{p}(1-\hat{p}) \big[ \frac{1}{n_1} +
 <hr />
 <ol start="16">
 <li id="fn16"><p>comme le test de Smith-Satterthwaite ou le test d’Aspin-Welch<a href="tests-dhypothèses-sur-deux-échantillons.html#fnref16" class="footnote-back">↩︎</a></p></li>
+<li id="fn17"><p>car sous <span class="math inline">\(H_0\)</span>, <span class="math inline">\(p_1=p_2\)</span><a href="tests-dhypothèses-sur-deux-échantillons.html#fnref17" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
