--- a/Statinf/tests-dhypothèses.html
+++ b/Statinf/tests-dhypothèses.html
@@ -830,8 +830,8 @@ qui suit la loi <span class="math inline">\(St\)</span> avec <span class="math i
 <div class="rmdinsight">
 <p><strong>Critère de rejet de <span class="math inline">\(H_0: \mu = \mu_0\)</span> (test bilatéral, loi normale, variance inconnue)</strong></p>
 <p>On se donne comme règle de rejeter <span class="math inline">\(H_0: \mu = \mu_0\)</span> au profit de <span class="math inline">\(H_1: \mu \neq \mu_0\)</span> si</p>
-<p><span class="math display">\[|t_0| &gt; t_{n-1,\frac{\alpha}{2}}\]</span></p>
-<p>où <span class="math inline">\(t_0\)</span> est la valeur observée de la Statistique <span class="math inline">\(T_0\)</span> et <span class="math inline">\(t_{n-1,\frac{\alpha}{2}}\)</span> est le quantile d’ordre <span class="math inline">\(1-\alpha/2\)</span> de la loi <span class="math inline">\(t\)</span> de Student avec <span class="math inline">\(n-1\)</span> degrés de liberté.</p>
+<p><span class="math display">\[|t_0| &gt; t_{n-1,1-\frac{\alpha}{2}}\]</span></p>
+<p>où <span class="math inline">\(t_0\)</span> est la valeur observée de la Statistique <span class="math inline">\(T_0\)</span> et <span class="math inline">\(t_{n-1,1-\frac{\alpha}{2}}\)</span> est le quantile d’ordre <span class="math inline">\(1-\alpha/2\)</span> de la loi <span class="math inline">\(t\)</span> de Student avec <span class="math inline">\(n-1\)</span> degrés de liberté.</p>
 </div>
 </div>
 <div id="la-procédure-pour-les-tests-unilatéraux-1" class="section level4" number="5.2.2.2">
