--- a/Statinf/variables-aléatoires-discrètes.html
+++ b/Statinf/variables-aléatoires-discrètes.html
@@ -497,7 +497,7 @@ l’événement <span class="math inline">\(A\)</span> s’est réalisé si et s
 <div id="notions-sur-les-evénements" class="section level3 unnumbered">
 <h3>Notions sur les Evénements</h3>
 <ul>
-<li><p>Soit <span class="math inline">\(({\Omega},\mathcal{A})\)</span> un espace probibilisable:</p>
+<li><p>Soit <span class="math inline">\(({\Omega},\mathcal{A})\)</span> un espace probabilisable:</p>
 <ul>
 <li><p>L’ensemble <span class="math inline">\(\mathcal{A}\)</span> est appelé <span>tribu des événements</span>.
 Les éléments de <span class="math inline">\(\mathcal{A}\)</span> s’appellent les <span>événements</span>.</p></li>
