--- a/research/index.html
+++ b/research/index.html
@@ -59,12 +59,12 @@
   <meta property="og:type" content="website" />
 
   
-  <meta property="og:url" content="http://localhost:4000/research/" />
-  <link rel="canonical" href="http://localhost:4000/research/" />
+  <meta property="og:url" content="http://mghassany.com/research/" />
+  <link rel="canonical" href="http://mghassany.com/research/" />
   
 
   
-  <meta property="og:image" content="http://localhost:4000/img/MG_web.jpg" />
+  <meta property="og:image" content="http://mghassany.com/img/MG_web.jpg" />
   
   
 
@@ -82,7 +82,7 @@
   
 
   
-  <meta name="twitter:image" content="http://localhost:4000/img/MG_web.jpg" />
+  <meta name="twitter:image" content="http://mghassany.com/img/MG_web.jpg" />
   
 
 </head>
@@ -100,7 +100,7 @@
         <span class="icon-bar"></span>
       </button>
 <!--       remove navbar-brand to remove name in order to put photo on left
- --><!--       <a class="navbar-brand" href="http://localhost:4000">Mohamad Ghassany</a>
+ --><!--       <a class="navbar-brand" href="http://mghassany.com">Mohamad Ghassany</a>
  -->    </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
@@ -182,7 +182,7 @@
 	
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
-	    <a href="http://localhost:4000 ">
+	    <a href="http://mghassany.com ">
 	      <img class="avatar-img" src="/img/MG_web.jpg" />
 		</a>
 	  </div>
