--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,19 +52,19 @@
   
 
    
-  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 2020-2021: Course materials . + Fall 2019-2020: Course materials . * Statistique Inférentielle. + Fall 2020-2021: Course materials . * Complément de formation Statistique. + Fall 2020-2021: Course materials . + Fall 2018-2019: -...">
+  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 2021-2022: Course materials . * Statistique Inférentielle. + Fall 2020-2021: Course materials . * Complément de formation Statistique. + Fall 2020-2021: Course materials . + Fall 2018-2019: - Discrete Random Variables: . - Continuous...">
   
 
 
   <meta property="og:type" content="website" />
 
   
-  <meta property="og:url" content="http://localhost:4000/teaching/" />
-  <link rel="canonical" href="http://localhost:4000/teaching/" />
+  <meta property="og:url" content="http://mghassany.com/teaching/" />
+  <link rel="canonical" href="http://mghassany.com/teaching/" />
   
 
   
-  <meta property="og:image" content="http://localhost:4000/img/MG_web.jpg" />
+  <meta property="og:image" content="http://mghassany.com/img/MG_web.jpg" />
   
   
 
@@ -78,11 +78,11 @@
   
 
   
-  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 2020-2021: Course materials . + Fall 2019-2020: Course materials . * Statistique Inférentielle. + Fall 2020-2021: Course materials . * Complément de formation Statistique. + Fall 2020-2021: Course materials . + Fall 2018-2019: -...">
+  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 2021-2022: Course materials . * Statistique Inférentielle. + Fall 2020-2021: Course materials . * Complément de formation Statistique. + Fall 2020-2021: Course materials . + Fall 2018-2019: - Discrete Random Variables: . - Continuous...">
   
 
   
-  <meta name="twitter:image" content="http://localhost:4000/img/MG_web.jpg" />
+  <meta name="twitter:image" content="http://mghassany.com/img/MG_web.jpg" />
   
 
 </head>
@@ -100,7 +100,7 @@
         <span class="icon-bar"></span>
       </button>
 <!--       remove navbar-brand to remove name in order to put photo on left
- --><!--       <a class="navbar-brand" href="http://localhost:4000">Mohamad Ghassany</a>
+ --><!--       <a class="navbar-brand" href="http://mghassany.com">Mohamad Ghassany</a>
  -->    </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
@@ -182,7 +182,7 @@
 	
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
-	    <a href="http://localhost:4000 ">
+	    <a href="http://mghassany.com ">
 	      <img class="avatar-img" src="/img/MG_web.jpg" />
 		</a>
 	  </div>
@@ -230,8 +230,8 @@
 <ul>
   <li>Machine Learning.
     <ul>
-      <li>Fall 2020-2021: <a target="_blank" href="../MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
-      <li>Fall 2019-2020: <a target="_blank" href="../MLcourse19/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.
+      <li>Fall 2021-2022: <a target="_blank" href="../MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.
+  <!-- + Fall 2019-2020: <a target="_blank" href="../MLcourse19/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>. -->
 <!-- 	+ Spring 17-18: <a target="_blank" href="../MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>. --></li>
     </ul>
   </li>
@@ -336,7 +336,7 @@
 
 <h3 id="20082009">2008–2009</h3>
 
-<p>Math teacher, Grades 8 &amp; 9.</p>
+<p>Math teacher, Grades 6 &amp; 7.</p>
 
 	    
     </div>
