--- a/EfreiML/TP2.html
+++ b/EfreiML/TP2.html
@@ -221,7 +221,11 @@
 }
 
 #sidebar {
-    background: #000;
+    background: #077bbfcc;
+}
+
+#sidebar a {
+    color: #fff;
 }
 
 h1, h2, h3, h4, h5, h6, legend {
