--- a/MLcourse/pw-8.html
+++ b/MLcourse/pw-8.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2021-10-18" />
+<meta name="date" content="2021-12-01" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -585,7 +585,92 @@ What you see on the figure showing the BIC values are different parameterisation
 An example of 9 generated values from three Gaussians is shown in the following table:</li>
 </ul>
 <center>
-<pre><code>#ans&gt; Error in loadNamespace(x): aucun package nommé &#39;pander&#39; n&#39;est trouvé</code></pre>
+<table>
+<thead>
+<tr>
+<th style="text-align:right;">
+X
+</th>
+<th style="text-align:right;">
+source
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:right;">
+-5.63
+</td>
+<td style="text-align:right;">
+1
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+-4.82
+</td>
+<td style="text-align:right;">
+1
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+-5.84
+</td>
+<td style="text-align:right;">
+1
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+1.59
+</td>
+<td style="text-align:right;">
+2
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+0.33
+</td>
+<td style="text-align:right;">
+2
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+-0.82
+</td>
+<td style="text-align:right;">
+2
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5.49
+</td>
+<td style="text-align:right;">
+3
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5.74
+</td>
+<td style="text-align:right;">
+3
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5.58
+</td>
+<td style="text-align:right;">
+3
+</td>
+</tr>
+</tbody>
+</table>
 </center>
 <p><strong>9.</strong> Show your generated data on one axe (this kind of figures are called stripchart), color them with respect to ground truth, you must obtain something like:</p>
 <p><img src="Machine-Learning_files/figure-html/unnamed-chunk-267-1.png" width="70%" style="display: block; margin: auto;" /></p>
