--- a/MLcourseEfrei/discriminant-analysis.html
+++ b/MLcourseEfrei/discriminant-analysis.html
@@ -45,6 +45,8 @@
 <li class="book-part">Machine Learning II</li>
 <li><a class="active" href="discriminant-analysis.html"><span class="header-section-number">1</span> Discriminant Analysis</a></li>
 <li><a class="" href="lab.html">Lab</a></li>
+<li><a class="" href="dimensionality-reduction.html"><span class="header-section-number">2</span> Dimensionality Reduction</a></li>
+<li><a class="" href="lab-1.html">Lab</a></li>
 </ul>
 
         <div class="book-extra">
@@ -332,7 +334,7 @@ p_k(x) = \frac{  \pi_k \frac{1}{\sigma \sqrt{2\pi}} e^{-\frac{1}{2} \big(\frac{x
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Machine Learning @ Efrei Paris</strong>" was written by Mohamad Ghassany. It was last built on 2022-04-06.</p>
+    <p>"<strong>Machine Learning @ Efrei Paris</strong>" was written by Mohamad Ghassany. It was last built on 2022-04-25.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
