--- a/MLcourseEfrei/lab.html
+++ b/MLcourseEfrei/lab.html
@@ -45,6 +45,8 @@
 <li class="book-part">Machine Learning II</li>
 <li><a class="" href="discriminant-analysis.html"><span class="header-section-number">1</span> Discriminant Analysis</a></li>
 <li><a class="active" href="lab.html">Lab</a></li>
+<li><a class="" href="dimensionality-reduction.html"><span class="header-section-number">2</span> Dimensionality Reduction</a></li>
+<li><a class="" href="lab-1.html">Lab</a></li>
 </ul>
 
         <div class="book-extra">
@@ -379,7 +381,7 @@ If you use the <code>ROCR</code> package:</p>
 </div>
   <div class="chapter-nav">
 <div class="prev"><a href="discriminant-analysis.html"><span class="header-section-number">1</span> Discriminant Analysis</a></div>
-<div class="empty"></div>
+<div class="next"><a href="dimensionality-reduction.html"><span class="header-section-number">2</span> Dimensionality Reduction</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
       <ul class="nav navbar-nav">
@@ -405,7 +407,7 @@ If you use the <code>ROCR</code> package:</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>Machine Learning @ Efrei Paris</strong>" was written by Mohamad Ghassany. It was last built on 2022-04-06.</p>
+    <p>"<strong>Machine Learning @ Efrei Paris</strong>" was written by Mohamad Ghassany. It was last built on 2022-04-25.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
