--- a/MLcourseEfrei/index.html
+++ b/MLcourseEfrei/index.html
@@ -60,6 +60,7 @@ ul.task-list{list-style: none;}
 <script async="" src="https://hypothes.is/embed.js"></script>
 
 
+<link rel="stylesheet" href="mycss.css">
 </head>
 
 <body class="docked">
