--- a/MLcourseEfrei/Lab-kmeans.html
+++ b/MLcourseEfrei/Lab-kmeans.html
@@ -494,11 +494,17 @@ Important
 <div class="cell">
 
 </div>
-<div class="cell" type="rmdtip">
-<div class="rmdtip">
-<p>
-By applying <span class="math inline">(k)</span>-means only on the PCs we obtain different and less accurate result, but it is still an insightful way.
-</p>
+<div class="callout-tip callout callout-style-default callout-captioned">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-caption-container flex-fill">
+Tip
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>By applying <span class="math inline">\(k\)</span>-means only on the PCs we obtain different and less accurate result, but it is still an insightful way.</p>
 </div>
 </div>
 </section><section id="implementing-k-means" class="level3 unnumbered"><h3 class="unnumbered anchored" data-anchor-id="implementing-k-means"><code>Implementing k-means</code></h3>
@@ -605,7 +611,7 @@ By applying <span class="math inline">(k)</span>-means only on the PCs we obtain
 <span class="co"># Then we plot it</span>
 <span class="fu"><a href="https://rdrr.io/r/graphics/plot.default.html">plot</a></span><span class="op">(</span><span class="va">dendro</span><span class="op">)</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output-display">
-<p><img src="Lab-kmeans_files/figure-html/unnamed-chunk-50-1.png" class="img-fluid" width="672"></p>
+<p><img src="Lab-kmeans_files/figure-html/unnamed-chunk-48-1.png" class="img-fluid" width="672"></p>
 </div>
 </div>
 </section><section id="hierarchical-clustering-on-iris-dataset" class="level3 unnumbered"><h3 class="unnumbered anchored" data-anchor-id="hierarchical-clustering-on-iris-dataset">Hierarchical clustering on Iris dataset</h3>
