--- a/MLcourseEfrei/kmeans.html
+++ b/MLcourseEfrei/kmeans.html
@@ -208,6 +208,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   <a href="./em.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">📗 Gaussian Mixture Models</span></a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Lab-EM.html" class="sidebar-item-text sidebar-link">- 💻 Lab</a>
+  </div>
+</li>
     </ul>
 </li>
     </ul>
