--- a/MLcourseEfrei/discriminantanalysis.html
+++ b/MLcourseEfrei/discriminantanalysis.html
@@ -145,6 +145,11 @@ ul.task-list{list-style: none;}
   <a href="./em.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">📗 Gaussian Mixture Models</span></a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./Lab-EM.html" class="sidebar-item-text sidebar-link">- 💻 Lab</a>
+  </div>
+</li>
     </ul>
 </li>
     </ul>
