--- a/MLcourseEfrei/density-based.html
+++ b/MLcourseEfrei/density-based.html
@@ -217,6 +217,9 @@ Oops! Your browser doesn’t support PDFs!
 <a href="pdf/KDDClusterAnalysis17-screen.pdf">Download Instead</a>
 </p>
 </object>
+<object data="pdf/KDDClusterAnalysis17-screen.pdf" type="application/pdf" frameborder="0" width="100%" height="600px" style="padding: 20px;">
+<embed src="pdf/KDDClusterAnalysis17-screen.pdf" width="100%" height="600px">
+</object>
 <p align="right">
 ◼
 </p>
