--- a/teaching/index.html
+++ b/teaching/index.html
@@ -237,7 +237,7 @@
   </li>
   <li>Statistique Inférentielle.
     <ul>
-      <li>Fall 2020-2021: <a target="_blank" href="../Statinf/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
+      <li>Fall 2020-2021: <a target="_blank" href="../Probas/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
     </ul>
   </li>
   <li>Complément de formation Statistique.
