--- a/teaching/index.html
+++ b/teaching/index.html
@@ -230,7 +230,7 @@
 <ul>
   <li>Machine Learning.
     <ul>
-      <li>Fall 2021-2022: <a target="_blank" href="../MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.
+      <li>Fall 2021-2022: <a target="_blank" href="../courses/MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.
   <!-- + Fall 2019-2020: <a target="_blank" href="../MLcourse19/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>. -->
 <!-- 	+ Spring 17-18: <a target="_blank" href="../MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>. --></li>
     </ul>
