--- a/courses/MLEfreiS7/TD1.html
+++ b/courses/MLEfreiS7/TD1.html
@@ -230,23 +230,7 @@ Jupyter
 <p>During the labs, you must use Jupyter notebooks. The Jupyter Notebook is the original web application for creating and sharing computational documents. It offers a simple, streamlined, document-centric experience. Jupyter is installed by default when you install Anaconda. You can create notebooks using JupyterLab via your browser or using a text editor like VScode.</p>
 </div>
 </div>
-<ul>
-<li>load data</li>
-<li>split data</li>
-<li>simple linear regression</li>
-<li>multiple linear regression
-<ul>
-<li>anova on chas</li>
-<li>feature selection</li>
-<li>scratch :
-<ul>
-<li>normal equation</li>
-<li>GD</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul></section><section id="predicting-house-value-boston-dataset" class="level2"><h2 class="anchored" data-anchor-id="predicting-house-value-boston-dataset">Predicting House Value: Boston dataset</h2>
+</section><section id="predicting-house-value-boston-dataset" class="level2"><h2 class="anchored" data-anchor-id="predicting-house-value-boston-dataset">Predicting House Value: Boston dataset</h2>
 <p>In this lab we are going to use a dataset called Boston. It records the median value of houses for 506 neighborhoods around Boston. Our task is to predict the median house value.</p>
 <section id="loading-data" class="level3"><h3 class="anchored" data-anchor-id="loading-data">Loading Data</h3>
 <div class="callout-note callout callout-style-default callout-captioned">
@@ -480,6 +464,9 @@ Anova
 
 </div>
 <p><strong>23.</strong> Apply an ANOVA test of <code>MEDV</code> with respect to <code>CHAS</code>. What do you conclude ?</p>
+<div class="cell">
+
+</div>
 <div class="cell">
 
 </div>
