--- a/courses/MLEfreiS7/TD1.html
+++ b/courses/MLEfreiS7/TD1.html
@@ -481,9 +481,28 @@ Anova
 <div class="cell">
 
 </div>
-<div class="cell">
-
-</div>
+<!-- :::{.callout-tip collapse="true"} -->
+<!-- ## Expand To see solution -->
+<!-- This is an example of a 'folded' caution callout that can be expanded by the user. You can use `collapse="true"` to collapse it by default or `collapse="false"` to make a collapsible callout that is expanded by default. -->
+<!-- $$Y = \beta x$$ -->
+<!-- ::: -->
+<!-- ```{python} -->
+<!-- #| eval: false -->
+<!-- #| echo: false -->
+<!-- # https://www.reneshbedre.com/blog/anova.html -->
+<!-- ``` -->
+<!-- <details><summary><span style="color: firebrick;">Voir la solution</span></summary> -->
+<!-- \begin{align} -->
+<!-- \frac{\partial l}{\partial \phi} & = \frac{\partial}{\partial \phi} \sum^{n}_{i=1}\left(y^{(i)}\log\phi+(1-y^{(i)})\log(1-\phi)\right) \\ -->
+<!--                                 & = \sum^{n}_{i=1}\frac{\partial(y^{(i)}\log\phi)}{\partial \phi} + \frac{\partial\left((1-y^{(i)})\log(1-\phi)\right)}{\partial \phi} \\ -->
+<!--                                 & = \frac{\sum^{n}_{i=1}y^{(i)}}{\phi} - \frac{\sum^{n}_{i=1}(1-y^{(i)})}{1-\phi} \\\\ -->
+<!--                                 \text{on annule la dérivée } \Rightarrow & \ \frac{\sum^{n}_{i=1}y^{(i)}}{\phi} = \frac{\sum^{n}_{i=1}(1-y^{(i)})}{1-\phi} \\ -->
+<!--                                 \Rightarrow & \sum^{n}_{i=1}y^{(i)}-\phi\sum^{n}_{i=1}y^{(i)} = n\phi-\phi\sum^{n}_{i=1}y^{(i)} \\ -->
+<!--                                 \Rightarrow & \ \phi = \frac{\sum^{n}_{i=1}y^{(i)}}{n} \\ -->
+<!--                                 \Rightarrow & \ \phi = \frac{\sum^{n}_{i=1}[y^{(i)}=1]}{n} -->
+<!-- \end{align} -->
+<!-- <p style="text-align: center;"><span style="color: firebrick;">_______________</span></p> -->
+<!-- </details> -->
 <div class="cell">
 
 </div>
