--- a/courses/ProbasEfreiS3/exos1.html
+++ b/courses/ProbasEfreiS3/exos1.html
@@ -204,7 +204,7 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 2 </strong></span>On jette un dé équilibré 3 fois de suite, et on s’intéresse au total des points obtenus. De combien de façons peut-on obtenir:</p>
+<p><span class="theorem-title"><strong>Exercice 2 </strong></span>On jette un dé 🎲 équilibré 3 fois de suite, et on s’intéresse au total des points obtenus. De combien de façons peut-on obtenir:</p>
 <ol type="1">
 <li><p>un total égale à 16.</p></li>
 <li><p>un total égale à 15.</p></li>
