--- a/courses/MDSEfreiS7/td1.html
+++ b/courses/MDSEfreiS7/td1.html
@@ -359,38 +359,66 @@ ul.task-list li input[type="checkbox"] {
 <li><p>Calculer <span class="math inline">\(E(Y)\)</span>.</p></li>
 </ol>
 </div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 1.15 </strong></span>On note <span class="math inline">\(\Phi\)</span> la fonction de répartition de la loi normale centrée réduite.</p>
-<ol type="1">
-<li><p>Soit <span class="math inline">\(X\)</span> une v.a. qui suit une loi normale centrée réduite, i.e. <span class="math inline">\(X \thicksim \mathcal{N}(0,1)\)</span>. A l’aide de la table de la loi normale, calculer: <span class="math inline">\(P(X&gt;2), P(-1&lt;X&lt;1.5)\)</span> et <span class="math inline">\(P(X&lt;0.5)\)</span>.</p></li>
-<li><p>Soit <span class="math inline">\(Y\)</span> une v.a. qui suite une loi normale: <span class="math inline">\(Y \thicksim \mathcal{N}(\mu,\sigma^2)=\mathcal{N}(4,16)\)</span>. Calculer: <span class="math inline">\(P(Y&gt;2), P(-1&lt;Y&lt;1.5)\)</span> et <span class="math inline">\(P(Y&lt;0.5)\)</span>.</p></li>
-<li><p>Soit <span class="math inline">\(U \thicksim \mathcal{N}(6,4)\)</span>. Calculer: <span class="math inline">\(P(|U-4|&lt;3)\)</span> et <span class="math inline">\(P( U&gt;6 | U &gt; 3)\)</span>.</p></li>
-</ol>
-</div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 1.16 </strong></span>Une machine produit des pièces dont le diamètre <span class="math inline">\(X\)</span> (en cm) est une variable aléatoire qui suit une loi normale d’espérance <span class="math inline">\(\mu\)</span> et de variance <span class="math inline">\(\sigma^2 = (0.01)^2\)</span>. Quelle devrait être la valeur de <span class="math inline">\(\mu\)</span> de sorte que la probabilité qu’une pièce prise au hasard ait un diamètre supérieur à 3 cm, soit inférieure à 0.01?</p>
-</div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 1.17 (Loi uniforme et loi exponentielle) </strong></span>Soit <span class="math inline">\(U\)</span> une v.a.c de loi unifrorme sur <span class="math inline">\([0,1]\)</span>. Montrer que la v.a. <span class="math inline">\(X= - \ln U\)</span> suit une loi exponentielle.</p>
-</div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 1.18 </strong></span>Exprimer les intégrales suivantes à l’aide de la fonction de répartition <span class="math inline">\(\Phi\)</span> de la loi normale centrée réduite, puis en calculer des valeurs approchées à <span class="math inline">\(10^{-4}\)</span> près:</p>
-<ol type="1">
-<li><span class="math inline">\(A=\int_0^1 e^{-\frac{x^2}{2}} dx\)</span></li>
-<li><span class="math inline">\(B=\int_0^2 e^{-2x^2+4x-2} dx\)</span></li>
-</ol>
-</div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 1.19 </strong></span><strong>Loi de Laplace</strong></p>
-<p>Soit <span class="math inline">\(c &gt; 0\)</span>, une constante réelle. Soit <span class="math inline">\(f\)</span> la fonction définie sur <span class="math inline">\(\mathbb{R}\)</span> par:</p>
-<p><span class="math display">\[ \forall \, x \in  \mathbb{R}, \quad f(x) = \frac{c}{2} e^{- c |x|}\]</span></p>
-<ol type="1">
-<li>Montrer que <span class="math inline">\(f\)</span> est une densité.</li>
-<li>Déterminer la fonction de répartition <span class="math inline">\(F\)</span> de <span class="math inline">\(X\)</span>.</li>
-<li>On admet que <span class="math inline">\(X\)</span> admet une espérance. Calculer <span class="math inline">\(E(X)\)</span>.</li>
-<li>Déterminer la loi de <span class="math inline">\(Y=|X|\)</span>.</li>
-</ol>
-</div>
+
+<!-- 
+::: {#exr-}
+On note $\Phi$ la fonction de répartition de la loi normale centrée
+réduite.
+
+1.  Soit $X$ une v.a. qui suit une loi normale centrée réduite, i.e.
+    $X \thicksim \mathcal{N}(0,1)$. A l’aide de la table de la loi
+    normale, calculer: $P(X>2), P(-1<X<1.5)$ et $P(X<0.5)$.
+
+2.  Soit $Y$ une v.a. qui suite une loi normale:
+    $Y  \thicksim \mathcal{N}(\mu,\sigma^2)=\mathcal{N}(4,16)$.
+    Calculer: $P(Y>2), P(-1<Y<1.5)$ et $P(Y<0.5)$.
+
+3.  Soit $U  \thicksim \mathcal{N}(6,4)$. Calculer: $P(|U-4|<3)$ et
+    $P( U>6 | U > 3)$.
+:::
+
+
+
+::: {#exr-}
+Une machine produit des pièces dont le diamètre $X$ (en cm) est une
+variable aléatoire qui suit une loi normale d’espérance $\mu$ et de
+variance $\sigma^2 = (0.01)^2$. Quelle devrait être la valeur de $\mu$
+de sorte que la probabilité qu’une pièce prise au hasard ait un diamètre
+supérieur à 3 cm, soit inférieure à 0.01?
+:::
+
+
+::: {#exr-}
+
+## Loi uniforme et loi exponentielle
+
+Soit $U$ une v.a.c de loi unifrorme sur $[0,1]$. Montrer que la v.a.
+$X= - \ln U$ suit une loi exponentielle.
+
+:::
+
+
+::: {#exr-}
+Exprimer les intégrales suivantes à l'aide de la fonction de répartition $\Phi$ de la loi normale centrée réduite, puis en calculer des valeurs approchées à $10^{-4}$ près:
+
+1. $A=\int_0^1 e^{-\frac{x^2}{2}} dx$
+2. $B=\int_0^2 e^{-2x^2+4x-2} dx$
+:::
+
+::: {#exr-}
+
+**Loi de Laplace**
+
+Soit $c > 0$, une constante réelle. Soit $f$ la fonction définie sur $\mathbb{R}$ par:
+
+$$ \forall \, x \in  \mathbb{R}, \quad f(x) = \frac{c}{2} e^{- c |x|}$$
+
+
+1. Montrer que $f$ est une densité.
+2. Déterminer la fonction de répartition $F$ de $X$.
+3. On admet que $X$ admet une espérance. Calculer $E(X)$.
+4. Déterminer la loi de $Y=|X|$.
+::: -->
 
 
 </section></main><!-- /main --><script id="quarto-html-after-body" type="application/javascript">
